--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-stylelint": "^3.9.0",
     "gulp-util": "^3.0.8",
-    "stylelint-config-standard": "^16.0.0"
+    "stylelint-config-standard": "^16.0.0",
+    "vinyl-ftp": "^0.6.0"
   },
   "dependencies": {}
 }
